After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 566411 - item properties dialog too wide
item properties dialog too wide
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File Properties Dialog
3.4.x
Other All
: Normal trivial
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 560987 626045 674694 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-01-03 13:49 UTC by Maurice Termeer
Modified: 2012-05-21 20:45 UTC
See Also:
GNOME target: ---
GNOME version: 3.3/3.4


Attachments
example properties dialog of an image with a long description (37.89 KB, image/png)
2009-01-03 13:51 UTC, Maurice Termeer
  Details
Adds ellipsize to end of image properties (#566411) (924 bytes, patch)
2010-07-25 21:00 UTC, Marcus Carlson
reviewed Details | Review
WIP (2.87 KB, patch)
2010-07-26 21:46 UTC, Marcus Carlson
none Details | Review

Description Maurice Termeer 2009-01-03 13:49:53 UTC
Please describe the problem:
The item properties dialog for an image with a very long description is too wide. The description text is displayed on a single line and the dialog is sized to fit that single line. With a sufficiently long description, the dialog no longer fits on a single screen.

Steps to reproduce:
1. Obtain an image and put a very long description in its metadata.
2. Right-click the image (e.g. when placed on the desktop) and select properties
3. The improperly sized dialog appears, showing the single-line description in the image tab.


Actual results:
A very large dialog appears.

Expected results:
The description text should be wrapped to multiple lines, allowing for a smaller dialog.

Does this happen every time?
Yes.

Other information:
Comment 1 Maurice Termeer 2009-01-03 13:51:02 UTC
Created attachment 125681 [details]
example properties dialog of an image with a long description
Comment 2 palfrey 2009-01-03 14:40:12 UTC
Reassigning to Nautilus, as the properties window is part of that.
Comment 3 Marcus Carlson 2010-07-25 21:00:12 UTC
Created attachment 166542 [details] [review]
Adds ellipsize to end of image properties (#566411)
Comment 4 Cosimo Cecchi 2010-07-25 22:11:55 UTC
Review of attachment 166542 [details] [review]:

Wouldn't it be better to just wrap the string in more than one line?
Comment 5 Marcus Carlson 2010-07-26 21:46:52 UTC
Created attachment 166605 [details] [review]
WIP

Cosimo, I'm going crazy. Why o why isn't line wrap working? Even tried changing the vbox to a table but no luck. Any suggestions? 
(Yeah, this patch has ellipsize but ignore that. Also a scroll window which I think could be nice so we don't get vertical space problems, when line wrapping works..)
Comment 6 Marcus Carlson 2010-07-31 23:45:46 UTC
*** Bug 560987 has been marked as a duplicate of this bug. ***
Comment 7 Marcus Carlson 2010-08-04 19:51:56 UTC
*** Bug 626045 has been marked as a duplicate of this bug. ***
Comment 8 rustyBSD 2012-04-24 06:04:50 UTC
Hi,
sorry, I made a duplicate here : 674694.
But my patch is working and fixes the problem.
I hope I solved this old bug...
Comment 9 André Klapper 2012-04-24 10:03:03 UTC
*** Bug 674694 has been marked as a duplicate of this bug. ***
Comment 10 André Klapper 2012-04-24 10:04:15 UTC
Patch in bug 674694 (and in comment 5 here).
Comment 11 rustyBSD 2012-04-24 10:40:23 UTC
The patch in comment 5 seems not to work...
Comment 12 rustyBSD 2012-04-24 10:53:42 UTC
Ah no, the patch in comment 5 is working. But the problem is that the text isn't completely displayed, and if the user wants to read the full description of the image, he/she musts resize the window, and this window become more large than the screen. Brief, that's embarrassing.

I think a simple wrap is better, because it displays the full description without resizing or make us resize the window.
Comment 13 Cosimo Cecchi 2012-05-21 20:45:50 UTC
Pushed rustyBSD's patch to git master now, closing as FIXED.