image-properties: set the description label to wrap

Or images with a very long description will create a label that is
bigger than the whole screen.

https://bugzilla.gnome.org/show_bug.cgi?id=566411